<?xml version="1.0" encoding="utf-8"?>
<!--
  SPDX-FileCopyrightText: 2018 The Android Open Source Project
  SPDX-FileCopyrightText: 2023 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">System updater</string>
    <string name="android_version">Android version: %1$s</string>
    <string name="security_version">Android security update: %1$s</string>
    <string name="calyx_version">CalyxOS version: %1$s</string>
    <string name="last_check">Last successful check for update:\n%1$s</string>
    <string name="check_update">Check for update</string>
    <string name="settings">Settings</string>
    <string name="uptodate">Your system is up to date</string>
    <string name="checking_updates">Checking for updates…</string>
    <string name="checking_updates_failed">Failed to check for updates</string>
    <string name="installing_update">Installing system update…</string>
    <string name="update_available">System update available</string>
    <string name="updated_failed">Failed to update system</string>
    <string name="update_done">System update almost done</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="resume">Resume</string>
    <string name="suspend">Suspend</string>
    <string name="install">Install</string>
    <string name="reboot">Restart now</string>
    <string name="na">Not available</string>
    <string name="what_is_new">What\'s new in this update</string>
    <string name="update_size">Update size: <xliff:g id="size">%1$s</xliff:g></string>
    <string name="network_warning">Downloading updates over a mobile network, metered Wi-Fi or while roaming may cause additional charges</string>

    <string name="changelog_info">A new system update is now available for your device.\n\nThe update process may take a long time to complete. It is recommended that you use unmetered data, ensure your device is charged to at least 50% and back up your important data before proceeding.</string>

    <!-- Settings Fragment -->
    <string name="channel_title">Release channel</string>
    <string name="channel_security_express">Security express</string>
    <string name="channel_stable">Stable</string>
    <string name="channel_beta">Beta</string>
    <string name="channel_default" translatable="false">stable</string>
    <string name="battery_level_title">Require battery above warning level</string>
    <string name="battery_level_summary">Only check updates when the battery is above the warning level</string>
    <string name="reboot_title">Automatic reboot</string>
    <string name="reboot_summary">Automatically reboot once the device is idle after successfully installing an update</string>
    <string name="cellular_title">Mobile data</string>
    <string name="cellular_summary">Install updates when using mobile data</string>

    <!-- Notification -->
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Notifications regarding system updates check, availability, installation and errors</string>
    <string name="default_priority_update_channel_title">Updates (Default Priority)</string>
    <string name="default_priority_update_channel_desc">Displays notifications regarding regular system updates check and installation</string>
    <string name="high_priority_update_channel_title">Updates (High Priority)</string>
    <string name="high_priority_update_channel_desc">Displays notifications regarding new available system updates and errors</string>
    <string name="update_available_desc">Update now to get latest fixes and improvements</string>
    <string name="updated_failed_desc">An error occurred when trying to update the system</string>
    <string name="update_done_desc">Reboot your device to boot into the updated system</string>

</resources>
