<?xml version="1.0" encoding="utf-8"?>
<!--
  SPDX-FileCopyrightText: 2023 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="PREF_NOTIFICATION"
        app:summary="@string/notifications_desc"
        app:iconSpaceReserved="false"
        app:title="@string/notifications" />

    <ListPreference
        android:summary="@string/channel_stable"
        app:defaultValue="@string/channel_default"
        app:entries="@array/channel_entries"
        app:entryValues="@array/channel_values"
        app:iconSpaceReserved="false"
        app:key="PREF_CHANNEL"
        app:title="@string/channel_title" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:defaultValue="true"
        app:key="PREF_BATTERY"
        app:singleLineTitle="false"
        app:summary="@string/battery_level_summary"
        app:title="@string/battery_level_title" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:defaultValue="false"
        app:key="PREF_REBOOT"
        app:singleLineTitle="false"
        app:summary="@string/reboot_summary"
        app:title="@string/reboot_title" />

</PreferenceScreen>
