<?xml version="1.0" encoding="utf-8"?>
<!--
  SPDX-FileCopyrightText: 2023 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/update_menu" />

    <ImageView
        android:id="@+id/update_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_update"
        app:tint="?android:attr/colorAccent" />

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/uptodate"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_ic" />

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTitle">

        <TextView
            android:id="@+id/calyxVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:paddingBottom="3dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="Calyx version: 4.4.1-UNOFFICIAL" />

        <TextView
            android:id="@+id/androidVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingBottom="3dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="Android version: 13" />

        <TextView
            android:id="@+id/securityVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="Android security update: December 05, 2022" />

        <TextView
            android:id="@+id/lastUpdateCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="Last successful check for update:\nJanuary 11, 2023 15:29" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/networkWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTitle">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/updateInstallProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:min="0"
            android:visibility="gone"
            app:indicatorColor="?android:colorAccent"
            app:trackCornerRadius="10dp"
            app:trackThickness="5dp"
            tools:progress="30" />

        <TextView
            android:id="@+id/updateInstallSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Downloading" />

        <TextView
            android:id="@+id/updateChangelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:lineSpacingExtra="5sp"
            android:text="@string/changelog_info"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/updateChangelogButton"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/what_is_new"
            android:textSize="16sp"
            app:icon="@drawable/ic_tips" />

    </LinearLayout>

    <TextView
        android:id="@+id/updateSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="?android:textColorSecondary"
        android:textSize="13sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_cloud_download"
        app:layout_constraintBottom_toTopOf="@+id/networkWarning"
        tools:text="Update size: 1.46 GB" />

    <TextView
        android:id="@+id/networkWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:drawablePadding="10dp"
        android:gravity="start"
        android:text="@string/network_warning"
        android:textColor="?android:textColorSecondary"
        android:textSize="13sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/updateCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?android:colorAccent"
        app:indicatorSize="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTitle"
        app:trackThickness="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/check_update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>
